load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:deb.bzl", "pkg_deb")

cc_library(
    name = "lambda",
    srcs = [
        "src/axis_angle.cpp",
        "src/complex.cpp",
        "src/crc.cpp",
        "src/dynamic_matrix.cpp",
        "src/echelon.cpp",
        "src/elementary_automata.cpp",
        "src/levenshtein.cpp",
        "src/matrix.cpp",
        "src/quaternion.cpp",
        "src/solve.cpp",
        "src/units.cpp",
    ],
    hdrs = [
        "include/lambda/axis_angle.hpp",
        "include/lambda/complex.hpp",
        "include/lambda/crc.hpp",
        "include/lambda/decomposition.hpp",
        "include/lambda/dynamic_matrix.hpp",
        "include/lambda/echelon.hpp",
        "include/lambda/elementary_automata.hpp",
        "include/lambda/kalman_filter.hpp",
        "include/lambda/levenshtein.hpp",
        "include/lambda/matrix.hpp",
        "include/lambda/norm.hpp",
        "include/lambda/quaternion.hpp",
        "include/lambda/solve.hpp",
        "include/lambda/units.hpp",
        "include/lambda/lambda.hpp",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "test/automata_tests.cpp",
        "test/catch_main.cpp",
        "test/complex_tests.cpp",
        "test/decomposition_tests.cpp",
        "test/dynamic_matrix_tests.cpp",
        "test/kalman_tests.cpp",
        "test/levenshtein_tests.cpp",
        "test/matrix_tests.cpp",
        "test/solve_tests.cpp",
        "test/units_tests.cpp",
    ],
    deps = [
        ":lambda",
        "@catch2",
        "@eigen",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "include/lambda/*.hpp",
    ]),
)

cc_binary(
    name = "main",
    srcs = ["src/main.cpp"],
    deps = [
        ":lambda",
    ],
)

pkg_tar(
    name = "tar-bin",
    files = {
        ":main": "/usr/local/bin/lambda"
    }
)

pkg_tar(
    name = "tar-library",
    srcs = [":lambda"],
    package_dir = "/usr/lib/lambda/",
)

pkg_tar(
    name = "tar-headers",
    srcs = [":headers"],
    package_dir = "/opt/lambda/include/lambda",
)

pkg_tar(
    name = "tar-package",
    deps = [":tar-bin", ":tar-library", ":tar-headers"],
)

pkg_deb(
    name = "liblambda-deb",
    architecture = "amd64",
    data = ":tar-package",
    depends = [],
    homepage = "https://github.com/jwade109",
    maintainer = "Wade Foster <jwade109@vt.edu>",
    package = "liblambda",
    version = "0.0.1",
    description = "Description Title\nDescription content",
)
