load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:deb.bzl", "pkg_deb")

cc_binary(
    name = "main",
    srcs = ["src/main.cpp"],
    deps = [
        "//lambda:lambda",
    ],
)

pkg_tar(
    name = "liblambda",
    # package_dir = "/usr/bin/",
    files = {
        ":main": "usr/local/bin/lambda",
    },
)

pkg_deb(
    name = "lambda-deb",
    architecture = "amd64",
    data = ":liblambda",
    depends = [],
    homepage = "https://github.com/jwade109",
    maintainer = "Wade Foster <jwade109@vt.edu>",
    package = "liblambda",
    version = "0.0.1",
    description = "hoody doody doo",
)
